--- a/SimpleToster/SimpleToster.QuestionsDatabase/SimpleToster.QuestionsDatabase.csproj
+++ b/SimpleToster/SimpleToster.QuestionsDatabase/SimpleToster.QuestionsDatabase.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{06D6D6A0-9D76-40B8-B8F8-B417C90BFBC3}</ProjectGuid>
+    <ProjectGuid>{D506F020-8D43-4D0E-83C8-AD1C5D0C12FF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SimpleToster.Configuration</RootNamespace>
-    <AssemblyName>SimpleToster.Configuration</AssemblyName>
+    <RootNamespace>SimpleToster.QuestionsDatabase</RootNamespace>
+    <AssemblyName>SimpleToster.QuestionsDatabase</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -60,12 +60,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConfigurationModule.cs" />
-    <Compile Include="ConfigurationView.xaml.cs">
-      <DependentUpon>ConfigurationView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="ConfigurationViewModel.cs" />
+    <Compile Include="QuestionsDatabaseModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuestionsDatabaseView.xaml.cs">
+      <DependentUpon>QuestionsDatabaseView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="QuestionsDatabaseViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -77,7 +77,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Page Include="ConfigurationView.xaml">
+    <Page Include="QuestionsDatabaseView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
