--- a/SimpleToster/SimpleToster.QuestionsDatabase/packages.config
+++ b/SimpleToster/SimpleToster.QuestionsDatabase/packages.config
@@ -3,5 +3,6 @@
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
   <package id="Prism.Core" version="6.3.0-pre1" targetFramework="net461" />
+  <package id="Prism.Mef" version="6.3.0-pre1" targetFramework="net461" />
   <package id="Prism.Wpf" version="6.3.0-pre1" targetFramework="net461" />
 </packages>
