--- a/SimpleToster/SimpleToster.QuestionsDatabase/SimpleToster.QuestionsDatabase.csproj
+++ b/SimpleToster/SimpleToster.QuestionsDatabase/SimpleToster.QuestionsDatabase.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SimpleToster.QuestionsDatabase</RootNamespace>
     <AssemblyName>SimpleToster.QuestionsDatabase</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -73,8 +74,10 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Providers\QuestionsFromXmlProvider.cs" />
     <Compile Include="QuestionsDatabaseModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuestionsTypes\SimpleStringTestQuestion.cs" />
     <Compile Include="VVM\QuestionsDatabaseView.xaml.cs">
       <DependentUpon>QuestionsDatabaseView.xaml</DependentUpon>
     </Compile>
