--- a/SimpleToster/SimpleToster.Shared/SimpleToster.Shared.csproj
+++ b/SimpleToster/SimpleToster.Shared/SimpleToster.Shared.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SimpleToster.Shared</RootNamespace>
     <AssemblyName>SimpleToster.Shared</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -40,6 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\IQuestion.cs" />
+    <Compile Include="Interfaces\IQuestionsProvider.cs" />
+    <Compile Include="Interfaces\ISingleChoiceQuestion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegionNames.cs" />
   </ItemGroup>
