Added beginnings of reading SimpleTester question format.

--- a/SimpleToster/SimpleToster.QuestionsDatabase.Tests/SimpleToster.QuestionsDatabase.Tests.csproj
+++ b/SimpleToster/SimpleToster.QuestionsDatabase.Tests/SimpleToster.QuestionsDatabase.Tests.csproj
@@ -49,6 +49,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="SimpleStringTestQuestionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -60,6 +65,21 @@
       <Project>{D506F020-8D43-4D0E-83C8-AD1C5D0C12FF}</Project>
       <Name>SimpleToster.QuestionsDatabase</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SimpleToster.Shared\SimpleToster.Shared.csproj">
+      <Project>{5672bf74-fe42-4eaa-99b4-ae7d0ab9737a}</Project>
+      <Name>SimpleToster.Shared</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\SimpleTesterWI.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
